apps/playground/simple/with-istio/virtual-service.yaml
# https://istio.io/latest/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api
spec:
  hosts:
    - api-stable-simple.playground.svc.cluster.local
  http:
  - name: primary # referenced in canary.trafficRouting.istio.virtualService.routes
    route:
    - destination:
        host: api-stable-simple # referenced in canary.stableService
      weight: 100
    - destination:
        host: api-preview-simple # referenced in canary.canaryService
      weight: 0
